<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".AddUserActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_activity_add_user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue">

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_activity_main_pic"
                android:layout_width="@dimen/margin_150"
                android:layout_height="150dp"
                android:src="@drawable/iconperson"
                android:layout_centerInParent="true"
                app:civ_border_width="1dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_activity_add_user_add_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/civ_activity_main_pic"
                android:layout_marginTop="-40dp"
                android:layout_marginLeft="-40dp"
                android:layout_below="@id/civ_activity_main_pic"
                android:src="@drawable/ic_add_black_24dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:paddingLeft="@dimen/margin_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_margin_18"

                />


            <EditText

                android:id="@+id/et_activity_add_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_21">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_margin_18"

                />


            <EditText
                android:id="@+id/et_activity_add_user_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/margin_43"
                android:text="@string/email"
                android:textColor="@color/black"

                android:textSize="@dimen/text_margin_18"


                />


            <EditText
                android:id="@+id/et_activity_add_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_activity_add_user_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>