<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_activity_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue">

        </androidx.appcompat.widget.Toolbar>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_activity_detail_userimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_5"
            android:elevation="8dp"
            android:minHeight="@dimen/margin_150"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView

                android:id="@+id/txt_activity_detail_textfirstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_activity_detail_userimage"
                android:layout_gravity="right"
                android:layout_weight="0.6"
                android:padding="@dimen/margin_20"
                android:text="@string/firstname"
                android:textSize="@dimen/margin_20" />


            <TextView

                android:id="@+id/txt_activity_detail_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_activity_detail_userimage"
                android:layout_alignParentRight="true"
                android:layout_weight="1.4"
                android:padding="@dimen/margin_20"

                android:text="@string/firstname"
                android:textSize="@dimen/margin_20" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_activity_detail_textlastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_activity_detail_textfirstname"
                android:layout_weight="0.6"
                android:padding="@dimen/margin_20"
                android:text="@string/lastname"
                android:textSize="@dimen/margin_20" />


            <TextView
                android:id="@+id/txt_activity_detail_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_activity_detail_firstname"
                android:layout_alignParentRight="true"
                android:layout_weight="1.4"
                android:padding="@dimen/margin_20"
                android:paddingTop="@dimen/margin_50"
                android:paddingBottom="@dimen/margin_50"
                android:text="@string/firstname"
                android:textSize="@dimen/margin_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_activity_detail_textemail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_activity_detail_textlastname"
                android:layout_weight="0.6"
                android:padding="@dimen/margin_20"
                android:text="@string/email"
                android:textSize="@dimen/margin_20" />


            <TextView
                android:id="@+id/txt_activity_detail_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_activity_detail_lastname"
                android:layout_alignParentRight="true"
                android:layout_weight="1.4"
                android:padding="@dimen/margin_20"
                android:text="@string/firstname"


                android:textSize="@dimen/margin_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:padding="@dimen/margin_10"
            android:weightSum="2">


            <Button
                android:id="@+id/btn_activity_detail_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_20"

                android:layout_weight="1"
                android:background="@color/lightgreen"

                android:text="@string/update" />


            <Button
                android:id="@+id/btn_activity_detail_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_20"

                android:layout_weight="1"
                android:background="@color/Red"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>